# python-library-template

./: 404.html  README.md  cookiecutter.json  index.html  mkdocs.yml  requirements.txt
.github/workflows/: site.yml  test.yml
docs/: index.md
hooks/: post_gen_project.py
scripts/: deploy  install  serve  test
search/: search_index.json
{{ cookiecutter.project_name }}/: .coveragerc  .eslintrc.yml  .flake8  .gitignore  .importlinter  .pre-commit-config.yaml  .python-version  .remarkrc  .yamllint  Dockerfile  LICENSE  azure-pipelines.yml  dangerfile.ts  eslint.config.mjs  mkdocs.yml  mypy.ini  package.json  pyproject.toml  pytest.ini  release.config.js  requirements.txt  tox.ini
{{ cookiecutter.project_name }}/.github/workflows/: pipeline.yml  pull_request.yml  release.yml
{{ cookiecutter.project_name }}/docs/: changelog.md  index.md  installation.md
{{ cookiecutter.project_name }}/scripts/: build  check  install  lint  review  serve  terminal  test
{{ cookiecutter.project_name }}/src/{{ cookiecutter.__module_name }}/: __init__.py
{{ cookiecutter.project_name }}/src/{{ cookiecutter.private_module_name }}/: exceptions.py  func.py
{{ cookiecutter.project_name }}/src/{{ cookiecutter.public_module_name }}/: __init__.py  exceptions.py
{{ cookiecutter.project_name }}/testing/: configuration.py
{{ cookiecutter.project_name }}/tests/: conftest.py  test_func.py  test_{{ cookiecutter.public_module_name }}.py
{{ cookiecutter.project_name }}/tests/helpers/: configuration.py
