[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
description = "{{ cookiecutter.project_description }}"
documentation = "{{ cookiecutter.documentation_url }}"
homepage = "{{ cookiecutter.pypi_project }}"
license = "BSD-2-Clause"
name = "{{ cookiecutter.project_name }}"
readme = "docs/index.md"
repository = "{{ cookiecutter.github_repository }}"
version = "0.0.1dev0"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.urls]
Changelog = "{{ cookiecutter.changelog_url }}"
Issues = "{{ cookiecutter.issues_url }}"
Twitter = "{{ cookiecutter.twitter_url }}"
