[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
description = "{{ cookiecutter.project_description }}"
documentation = "{{ cookiecutter.__documentation_url }}"
{% if not cookiecutter.is_private %}homepage = "{{ cookiecutter.__pypi_project }}"
{% endif %}license = "{% if cookiecutter.is_private %}Proprietary{% else %}BSD-2-Clause{% endif %}"
name = "{{ cookiecutter.project_name }}"
readme = "docs/index.md"
repository = "{{ cookiecutter.__github_repository }}"
version = "0.0.1dev0"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.urls]
Changelog = "{{ cookiecutter.__changelog_url }}"
Issues = "{{ cookiecutter.__issues_url }}"
Twitter = "{{ cookiecutter.twitter_url }}"
